# University-Projects

./: first_semester.py  helpVoid.py  input.txt  main.py  output.txt  parser.py  people.csv  pyproject.toml  second_semester.py  text.txt  vectorsLib.py
1 year/: 19.txt  c_first.py  goods&prices.txt  (+3 more)
2 year/: README.md  drawings.py  gptScript.py  help_void.py  pyproject.toml  test.py  test_bot.py
2 year/Lab 1/: lab1.py  test.py
2 year/Lab 2/: extra_geometric.py  extra_harmonic.py  lab2.py
2 year/Lab 3/: extra.py  extra_sierpinski.py  lab3.py
2 year/Lab 4/: lab2.py  lab4.py
2 year/Part 2/: prac2_1.py  prac2_2.py  prac3_1.py  prac3_2.py  prac3_3.py  prac5_1_1.py  prac5_1_2.py  prac5_2_1.py  prac5_2_2.py  prac5_3_1.py  prac5_3_2.py  prac5_4_1.py  prac5_4_2.py  prac5_5_1.py  prac5_5_2.py  prac7_1_client.py  prac7_1_server.py  prac7_2_server.py  prac7_3_client.py  prac7_3_exchange.py  prac7_3_server.py  prac7_3_test.py  prac7_5_client.py  prac7_5_server.py  prac7_6_server.py  prac8_client.py  prac8_server.py
2 year/Part 2/FileManager/: config.ini  config.py  file_manager.py  main.py  main_curses.py  user_manager.py  users.json
2 year/Part 2/FileManager/sest/: myTextFile.txt
2 year/Part 2/Testing/test_lab6/: .gitignore  README.md  requirements.txt
2 year/Part 2/lesson4/: constants.py  game_help.py  level_config.py
2 year/Part 2/prac7_4/: file_crypto.py  generate_key.py  receive_messages.py  send_messages.py
2 year/asteroids/: config.py  game_objects.py  helpers.py  main.py
2 year/webserver/: pyproject.toml
2 year/webserver/app/: main.py  test.py
(+55 files in other folders)
