[tool.poetry]
name = "university-projects"
version = "0.1.0"
description = ""
authors = ["diekinari <ushakow.email@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
