[tool.poetry]
name = "university-projects"
version = "0.1.0"
description = ""
authors = ["diekinari <ushakow.email@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.33"
asyncpg = "^0.29.0"
databases = "^0.9.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
