[tool.poetry]
name = "webserver"
version = "0.1.0"
description = ""
authors = ["diekinari <ushakow.email@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.112.2"
databases = "^0.9.0"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.34"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
